force-app/main/default/objects/Property_Advance__c/fields/Appraisal_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Due_Date__c</fullName>
    <label>Appraisal Due Date</label>
    <type>Date</type>
</CustomField>