force-app/main/default/objects/Property_Advance__c/fields/Title_Company__c.field-meta.xml
<CustomField>
    <fullName>Title_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Title Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Property Advances (Title Company)</relationshipLabel>
    <relationshipName>Property_Advances1</relationshipName>
    <type>Lookup</type>
</CustomField>